main functionality complete. Basic situations covered in if/else tree. Solved specialsituation...

--- a/style.css
+++ b/style.css
@@ -12,6 +12,15 @@ h2 {
     pointer-events:none;
 }
 
+p{
+    font-family: 'IBM Plex Mono', monospace;
+    float: right;
+    font-size: 20px;
+    margin: 7px 20px 10px 0px
+        
+    
+}
+
 #main{
     margin-left: 36% ;
 }
@@ -19,7 +28,7 @@ h2 {
 #wrapper{
     
     width: 320px;
-    height: 420px;
+    height: 440px;
     border: 2px solid #908a8a;
     border-radius: 10px;
     background-color: rgba(191, 191, 90, 0.56);
@@ -40,6 +49,11 @@ h2 {
     
 }
 
+button{
+    color:white;
+    font-family: 'IBM Plex Mono', monospace;
+    font-size: 17px;  
+}
 .button{
     border: 1px solid black;
     border-radius: 10px;
@@ -52,9 +66,11 @@ h2 {
     
     
 }
+
 #screen{
     grid-column-start: 1;
     grid-column-end: 5;
+    
     border: 1px solid black;
     border-radius: 5px;
     background-color: white;
@@ -64,18 +80,19 @@ h2 {
 
 
 }
-#equals{
+.equals{
     grid-column-start: 3;
     grid-column-end: 5;
     grid-row-start: 6;
     grid-row-end: 6;
+    width: 140px !important;
 }
 
 #spacer{
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 2;
+    grid-column-start: 2 ;
+    grid-column-end: 4 ;
+    grid-row-start: 2 ;
+    grid-row-end: 2 ;
 }
 #clear{
     background-color:#cc0f0f;
@@ -86,7 +103,7 @@ h2 {
 }
 
 .buttonClick{
-    height
+    height: 52px;
     margin: 3px 1px 1px 1px;
-    box-shadow: inset 2px 2px gray;
+    box-shadow: inset 2px 2px black;
  ;
